tests/error/multiplyInteger-unit-wrong-1st-argument.uplc
(program 1.0.0[[(builtin multiplyInteger)(con unit ())](con integer 10)])